@@ -1,18 +1,17 @@
 package murraco;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-
 import lombok.RequiredArgsConstructor;
 import murraco.model.AppUser;
 import murraco.model.AppUserRole;
+import murraco.service.UserService;
 import org.modelmapper.ModelMapper;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.context.annotation.Bean;
 
-import murraco.service.UserService;
+import java.util.ArrayList;
+import java.util.List;
 
 @SpringBootApplication
 @RequiredArgsConstructor
@@ -30,12 +29,12 @@ public class JwtAuthServiceApp implements CommandLineRunner {
   }
 
   @Override
-  public void run(String... params) throws Exception {
+  public void run(String... params) {
     AppUser admin = new AppUser();
     admin.setUsername("admin");
     admin.setPassword("admin");
     admin.setEmail("admin@email.com");
-    admin.setAppUserRoles(new ArrayList<AppUserRole>(Arrays.asList(AppUserRole.ROLE_ADMIN)));
+    admin.setAppUserRoles(new ArrayList<>(List.of(AppUserRole.ROLE_ADMIN)));
 
     userService.signup(admin);
 
@@ -43,7 +42,7 @@ public class JwtAuthServiceApp implements CommandLineRunner {
     client.setUsername("client");
     client.setPassword("client");
     client.setEmail("client@email.com");
-    client.setAppUserRoles(new ArrayList<AppUserRole>(Arrays.asList(AppUserRole.ROLE_CLIENT)));
+    client.setAppUserRoles(new ArrayList<>(List.of(AppUserRole.ROLE_CLIENT)));
 
     userService.signup(client);
   }
